--- a/p8105_hw5_cz2540.Rmd
+++ b/p8105_hw5_cz2540.Rmd
@@ -1,14 +1,13 @@
 ---
 title: "Homework 5"
+author: "Connie Zhang"
 output: github_document
 ---
 
 ```{r setup, include=FALSE, warning = FALSE, message = FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-library(ggplot2)
-library(grid)
-library(httr)
+library(rvest)
 library(knitr)
 ```
 
@@ -19,26 +18,19 @@ set.seed(10)
 
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species)
-         )
-```
+  mutate(Species = as.character(Species))
 
 #function to fill missing values
-```{r}
 na_function = function(x) {
-  
   if (is.numeric(x) == T) { 
-    
 x = x %>%  replace_na(mean(x, na.rm = T))
-    
-    }
+}
   
   else if (is.character(x) == T) { 
-    
 x = x %>%  replace_na("virginica")
 } 
 
-    return(x)
+  return(x)
 }
 
 #map function over iris_with_missing
@@ -47,4 +39,61 @@ iris_with_missing =
 
 iris_with_missing
 ```
+# Problem 2 
+```{r}
+tidy_files = list.files(path = "./data",full.names = TRUE) %>%
+  map(read.csv) %>% 
+  reduce(rbind) %>% 
+  janitor::clean_names() %>%
+  mutate(subject_id = c(1:20), 
+    arm = ifelse(subject_id == c(1:10), "control","experimental")) %>%      gather(key = week, value = observation, week_1:week_8) %>% 
+  mutate(week = str_replace(week, "week_", ""))
+```  
 
+```{r}
+ tidy_files %>% 
+  ggplot(aes(x = week, y = observation)) + geom_line(aes(group = subject_id, color = arm)) + 
+  labs(
+    title = "Observations of Subjects over Time", 
+    x = "Week Number",
+    y = "Observation", 
+    caption = "Longitudinal study data for control and experimental arms") +
+  theme(legend.position = "bottom")
+```
+
+*  Over the 8 week period, the experimental arm gradually shows higher  observation values compared to the control arm. Specifically after the first 2-3 weeks, the two arms begin to deviate significantly from each other. The control arm oscillates around similar values consistently throughout 8 weeks while experimental arm increases over the same observational period.  
+
+# Problem 3 
+```{r}
+set.seed(10)
+
+#fix values, define model and get estimate/p-value
+sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
+  
+  sim_data = tibble(
+  x = rnorm(n, mean = 0, sd = 1),
+  y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50))
+)
+  
+  ls_fit = lm(y~x, data = sim_data) %>%
+  broom::tidy()
+
+  tibble(
+    beta_1_hat = ls_fit[[2,2]],
+    beta_1_p = ls_fit[[2,5]]
+  )
+}
+```
+
+```{r} 
+# generating 10,000 datasets
+
+set.seed(10)
+
+list_ten_thousand =
+  rerun(10000, sim_regression(beta1 = 0)) %>% 
+  bind_rows()
+
+list_ten_thousand
+
+```
