--- a/p8105_hw5_cz2540.md
+++ b/p8105_hw5_cz2540.md
@@ -1,5 +1,6 @@
 Homework 5
 ================
+Connie Zhang
 
 # Problem 1
 
@@ -8,27 +9,89 @@ set.seed(10)
 
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species)
-         )
+  mutate(Species = as.character(Species))
+
+#function to fill missing values
+na_function = function(x) {
+  if (is.numeric(x) == T) { 
+x = x %>%  replace_na(mean(x, na.rm = T))
+}
+  
+  else if (is.character(x) == T) { 
+x = x %>%  replace_na("virginica")
+} 
+
+  return(x)
+}
+
+#map function over iris_with_missing
+iris_with_missing =
+  map_df(iris_with_missing, na_function)
+
+iris_with_missing
 ```
 
-\#function to fill missing values
+    ## # A tibble: 150 x 5
+    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1         5.1          3.5         1.4         0.2  setosa 
+    ##  2         4.9          3           1.4         0.2  setosa 
+    ##  3         4.7          3.2         1.3         0.2  setosa 
+    ##  4         4.6          3.1         1.5         1.19 setosa 
+    ##  5         5            3.6         1.4         0.2  setosa 
+    ##  6         5.4          3.9         1.7         0.4  setosa 
+    ##  7         5.82         3.4         1.4         0.3  setosa 
+    ##  8         5            3.4         1.5         0.2  setosa 
+    ##  9         4.4          2.9         1.4         0.2  setosa 
+    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ## # … with 140 more rows
+
+# Problem 2
 
 ``` r
-na_function = function(x) {
+tidy_files = list.files(path = "./data",full.names = TRUE) %>%
+  map(read.csv) %>% 
+  reduce(rbind) %>% 
+  janitor::clean_names() %>%
+  mutate(subject_id = c(1:20), 
+    arm = ifelse(subject_id == c(1:10), "control","experimental")) %>%      gather(key = week, value = observation, week_1:week_8) %>% 
+  mutate(week = str_replace(week, "week_", ""))
+```
+
+``` r
+ tidy_files %>% 
+  ggplot(aes(x = week, y = observation)) + geom_line(aes(group = subject_id, color = arm)) + 
+  labs(
+    title = "Observations of Subjects over Time", 
+    x = "Week Number",
+    y = "Observation", 
+    caption = "Longitudinal study data for control and experimental arms") +
+  theme(legend.position = "bottom")
+```
+
+![](p8105_hw5_cz2540_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+  - Over the 8 week period, the experimental arm gradually shows higher
+    observation values compared to the control arm. Specifically after
+    the first 2-3 weeks, the two arms begin to deviate significantly
+    from each other. The control arm oscillates around similar values
+    consistently throughout 8 weeks while experimental arm increases
+    over the same observational period.
+
+# Problem 3
+
+``` r
+set.seed(1)
+
+#fix values, define model and get estimate/p-value
+sim_regression = function(n = 30, beto0 = 2, beta1 = 0) {
   
-  if (is.numeric(x)) { 
-    
-    replace_na(x, mean(x, na.rm = TRUE))
-    
-    }
+  sim_data = tibble(
+  x = rnorm(n, mean = 0, sd = 1),
+  y = beta0 + beta1 * x + rnorm(n, 0, sqrt(50))
+)
   
-  else if (is.character(x)) { 
-    
-    replace_na(x, "virginica")
+  ls_fit = lm(y~x, data = sim_data) 
+  broom::tidy(ls_fit)
 }
-  
-}
-#map function over iris_with_missing
-iris_filled = map(iris_with_missing, na_function)
 ```
