Final commits for hw 5

--- a/p8105_hw5_cz2540.md
+++ b/p8105_hw5_cz2540.md
@@ -149,9 +149,14 @@ filter(beta_1_p < 0.05) %>%
   summarize(
     proport_reject = n()/10000
   ) %>%
-  ggplot(aes(x = new_beta1, proport_reject, color = proport_reject)) +
-    theme_bw() + 
-    geom_point(size = 2, alpha = 0.5) + geom_smooth()
+  
+ggplot(aes(x = new_beta1, proport_reject, color = proport_reject)) + 
+    geom_point(size = 2, alpha = 0.5) + geom_smooth() +
+    labs(title = "Proportion of times that null was rejected by true beta1 value", x="true beta1 value", y="proportion of rejection") +
+    theme(plot.title = element_text(hjust = 0.5),legend.position = "none") +
+    scale_x_continuous(
+    breaks = c(0,1,2,3,4,5,6), 
+    labels = c(0,1,2,3,4,5,6)) 
 ```
 
     ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
@@ -166,23 +171,10 @@ filter(beta_1_p < 0.05) %>%
 
     ## Warning in stats::qt(level/2 + 0.5, pred$df): NaNs produced
 
-![](p8105_hw5_cz2540_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
-
-``` r
-    labs(title = "Proportion of times that null was rejected by true beta1 value", x="true beta1 value", y="proportion of rejection") +
-    theme(plot.title = element_text(hjust = 0.5),legend.position = "none") +
-    scale_x_continuous(
-    breaks = c(0,1,2,3,4,5,6), 
-    labels = c(0,1,2,3,4,5,6)) 
-```
-
-    ## NULL
-
-  - There seems to be a linear relation between the true value of beta
-    and power of the test; As the true beta increases, the power of the
-    test also increases.
-
-<!-- end list -->
+![](p8105_hw5_cz2540_files/figure-gfm/unnamed-chunk-7-1.png)<!-- --> \*
+There seems to be a linear relation between the true value of beta and
+power of the test; As the true beta increases, the power of the test
+also increases.
 
 ``` r
 # plot avg estimates of beta1
@@ -204,8 +196,7 @@ avg_samp = beta1_regenerate %>%
   mutate(group = rep("null rejected sample"))
 mean_beta1 = bind_rows(avg_pop, avg_samp) 
 
-ggplot(mean_beta1, aes(x = new_beta1, y = mean_beta1, group = group, color = group)) +
-  theme_bw() + 
+ggplot(mean_beta1, aes(x = new_beta1, y = mean_beta1, group = group, color = group)) + 
   geom_point(size = 2, alpha = 0.5) +
   geom_line(size = 1) +
   labs(title = "beta1 average estimate by true beta", x="value of true beta1", y="average estimate of beta1") +
