--- a/p8105_hw5_cz2540.Rmd
+++ b/p8105_hw5_cz2540.Rmd
@@ -120,9 +120,9 @@ filter(beta_1_p < 0.05) %>%
   summarize(
     proport_reject = n()/10000
   ) %>%
-  ggplot(aes(x = new_beta1, proport_reject, color = proport_reject)) +
-    theme_bw() + 
-    geom_point(size = 2, alpha = 0.5) + geom_smooth()
+  
+ggplot(aes(x = new_beta1, proport_reject, color = proport_reject)) + 
+    geom_point(size = 2, alpha = 0.5) + geom_smooth() +
     labs(title = "Proportion of times that null was rejected by true beta1 value", x="true beta1 value", y="proportion of rejection") +
     theme(plot.title = element_text(hjust = 0.5),legend.position = "none") +
     scale_x_continuous(
@@ -152,8 +152,7 @@ avg_samp = beta1_regenerate %>%
   mutate(group = rep("null rejected sample"))
 mean_beta1 = bind_rows(avg_pop, avg_samp) 
 
-ggplot(mean_beta1, aes(x = new_beta1, y = mean_beta1, group = group, color = group)) +
-  theme_bw() + 
+ggplot(mean_beta1, aes(x = new_beta1, y = mean_beta1, group = group, color = group)) + 
   geom_point(size = 2, alpha = 0.5) +
   geom_line(size = 1) +
   labs(title = "beta1 average estimate by true beta", x="value of true beta1", y="average estimate of beta1") +
